<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="reg">Register New Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="bmi">BMI</string>
    <string name="height">Height(cm)</string>
    <string name="weight">weight(cm)</string>
    <string name="your_bmi">Your BMI</string>
    <string name="cal">Calculator</string>
    <string name="add_weight">Add Weight</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="repassword">Re-Password</string>
</resources>
