<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:padding="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_action_email"
                android:id="@+id/reg_email"/>


            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_action_pass"
            android:id="@+id/reg_password"
                android:inputType="textPassword" />/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"
                android:drawableLeft="@drawable/ic_action_pass"
                android:id="@+id/reg_repassword"
                android:inputType="textPassword" />/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:id="@+id/reg_register"/>

        </LinearLayout>
    </ScrollView>




</LinearLayout>